--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <title>CNode:Node.js专业中文社区</title>
   </head>
   <body>
-    <div id="app">
-      <router-view></router-view>
-    </div>
+    <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
